charts/synapse/tests/golden/fixtures/test-well-known-ingress-tls.golden.yaml
---
# Source: synapse/templates/well-known-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: well-known
  
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - NOT-CONFIGURED
      secretName: synapse-tls
  rules:
  - host: NOT-CONFIGURED
    http:
      paths:
      - path: /\.well-known/matrix
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: well-known
